2009-06-30  Florent Lamiraux  <florent@laas.fr>

	Install again headers implementing abstract interface.
	* include/dynamicsJRLJapan/Body.h: Rename from src/Body.h.
	* include/dynamicsJRLJapan/DynamicBody.h: Rename from src/DynamicBody.h.
	* include/dynamicsJRLJapan/DynamicMultiBody.h: Rename from src/DynamicMultiBody.h.
	* include/dynamicsJRLJapan/Foot.h: Rename from src/Foot.h.
	* include/dynamicsJRLJapan/Hand.h: Rename from src/Hand.h.
	* include/dynamicsJRLJapan/HumanoidDynamicMultiBody.h: Rename from src/HumanoidDynamicMultiBody.h.
	* include/dynamicsJRLJapan/Joint.h: Rename from src/Joint.h.
	* include/dynamicsJRLJapan/MultiBody.h: Rename from src/MultiBody.h.
	* include/dynamicsJRLJapan/jrlDynamicRobotNA.hpp: Remove.
	* include/dynamicsJRLJapan/jrlHumanoidDynamicRobotNA.hpp: Remove.
	* include/dynamicsJRLJapan/robotDynamicsImpl.h: Rename from src/robotDynamicsImpl.h.
	* src/CMakeLists.txt: .
	* src/DynamicMultiBody.cpp: .
	* src/HumanoidDynamicMultiBody.cpp: .
	* src/HumanoidSpecificities.cpp: .
	These headers are needed for packages deriving from the classes defined in these headers.

2009-06-30  Olivier Stasse  <olivier.stasse@aist.go.jp>

	Moving in the template for Non Abstract implementation.
	* include/dynamicsJRLJapan/jrlDynamicRobotNA.hpp: New.
	* include/dynamicsJRLJapan/jrlHumanoidDynamicRobotNA.hpp: New.
	* src/CMakeLists.txt: .

2009-06-29  Olivier Stasse  <olivier.stasse@aist.go.jp>

	ODEBUG definition removed from files.
	* src/DynamicMultiBody.cpp: .
	* src/HumanoidDynamicMultiBody.cpp: .
	* src/HumanoidSpecificities.cpp: .
	* src/Joint.cpp: .
	* src/SpiritVRMLReader.cpp: .

2009-06-29  Olivier Stasse  <olivier.stasse@aist.go.jp>

	All ODEBUG macros are now in Debug.h....
	* src/Debug.h: Long overdue - All Macros are here now. New.

2009-06-29  Olivier Stasse  <olivier.stasse@aist.go.jp>

	Adding access through MAL_S4x4_ACCESS_I_J.
	* unitTesting/ComputeRealZMP.cpp: .

2009-06-29  Olivier Stasse  <olivier.stasse@aist.go.jp>
